initial ethernet support

--- a/platformio.ini
+++ b/platformio.ini
@@ -153,7 +153,53 @@ build_flags =
     -D HASP_INPUT_PIN=PD15 ; User Button K1 on DevEBox board
     -D STM32_SERIAL1 ; Set this option to use Serial1 as default sersial port, leave out if using Serial2
     -D HAL_ETH_MODULE_ENABLED=1         ; enable ethernet support
-    -D LAN8742A_PHY_ADDRESS=0x01U       ; set LAN8720 address
+    -D LAN8742A_PHY_ADDRESS=0x01U       ; set LAN8720 PHY address
+
+lib_deps =
+    ${env.lib_deps}
+    Ticker@^3.1.5
+    ; STM32duino LwIP@^2.1.2
+    ; STM32duino STM32Ethernet@^1.0.5
+    https://github.com/stm32duino/LwIP.git
+    https://github.com/stm32duino/STM32Ethernet.git
+
+src_filter = +<*> -<.git/> -<.svn/> -<example/> -<examples/> -<test/> -<tests/> -<lv_lib_zifont/> +<stm32f4/>
+
+;***************************************************
+
+[env:DevEBox_STM32F4xx]
+platform = ststm32
+board = black_f407zg
+board_build.mcu = stm32f407vgt6
+; upload_protocol = dfu
+upload_protocol = stlink
+debug_tool = stlink
+monitor_port = COM19     ; To change the port, use platform_override.ini
+build_flags =
+    ${env.build_flags}
+    ${flags.stm32_flags}
+    -I include/stm32f4
+; -- TFT_eSPI build options ------------------------
+    ${lcd.lolin24}
+    ;-D TFT_MISO=PB4 ;Default
+    ;-D TFT_MOSI=PB5 ;Default
+    ;-D TFT_SCLK=PB3 ;Default
+    -D TFT_CS=PE13 ;D8
+    -D TFT_DC=PE14  ;D3
+    -D TFT_BCKL=-1 ;None, configurable via web UI (e.g. 2 for D4)
+    -D TOUCH_CS=PA6 ;NC
+    -D TFT_RST=-1  ;D4
+    -D STM32
+    -D TFT_SPI3
+    -D USE_DMA_TO_TFT
+    -D HASP_USE_TASMOTA_SLAVE=1
+    -D HASP_OUTPUT_PIN=PA1          ; User LED D2 on DevEBox board 
+    -D HASP_INPUT_PIN=PA0           ; User Button K1 on DevEBox board
+    -D STM32_SERIAL1                ; Set this option to use Serial1 as default sersial port, leave out if using Serial2
+    -D HASP_USE_ETHERNET=1
+    -D HAL_ETH_MODULE_ENABLED=1
+    -D LAN8742A_PHY_ADDRESS=0x01U
+    ; -D DP83848_PHY_ADDRESS=0x01U
 
 lib_deps =
     ${env.lib_deps}
