Add stù32f4 http and mqtt

--- a/platformio.ini
+++ b/platformio.ini
@@ -22,6 +22,8 @@ extra_configs =
 default_envs =
     ; Uncomment the needed environments in platformio_override.ini
     ; You can also create new environments in in platformio_override.ini
+    DevEBox_STM32F4xx
+    black_f407vg
     ${override.extra_default_envs}
 
 ; -- Location of the configuration files
@@ -93,6 +95,7 @@ stm32_flags=
     -D IRAM_ATTR=                   ; No IRAM_ATTR available on STM32
     -D STM32
     -D STREAMUTILS_USE_EEPROM_UPDATE=1  ; update cell only when changed
+    -D MQTT_MAX_PACKET_SIZE=2048    ; longer PubSubClient messages
 
 ; -- By default there are no ${override.build_flags} set
 ; -- to use it, copy platformio_override.ini from the template
@@ -196,9 +199,10 @@ build_flags =
     -D HASP_OUTPUT_PIN=PA1          ; User LED D2 on DevEBox board 
     -D HASP_INPUT_PIN=PA0           ; User Button K1 on DevEBox board
     -D STM32_SERIAL1                ; Set this option to use Serial1 as default sersial port, leave out if using Serial2
+    -D USE_BUILTIN_ETHERNET=1
     -D HASP_USE_ETHERNET=1
     -D HAL_ETH_MODULE_ENABLED=1
-    -D LAN8742A_PHY_ADDRESS=0x01U
+    ;-D LAN8742A_PHY_ADDRESS=0x01U  ; Moved to include\stm32f4\hal_conf_custom.h
     ; -D DP83848_PHY_ADDRESS=0x01U
 
 lib_deps =
@@ -208,6 +212,7 @@ lib_deps =
     ; STM32duino STM32Ethernet@^1.0.5
     https://github.com/stm32duino/LwIP.git
     https://github.com/stm32duino/STM32Ethernet.git
+    EthernetWebServer_STM32
 
 src_filter = +<*> -<.git/> -<.svn/> -<example/> -<examples/> -<test/> -<tests/> -<lv_lib_zifont/> +<stm32f4/>
 
