--- a/platformio.ini
+++ b/platformio.ini
@@ -20,12 +20,11 @@ extra_configs =
     platformio_override.ini
     ; --  Put active [env] files in this dir to be included in the build menu
     user_setups/active/*.ini
+    user_setups/*/*.ini
 
 default_envs =
     ; Uncomment the needed environments in platformio_override.ini
     ; You can also create new environments in in platformio_override.ini
-    DevEBox_STM32F4xx
-    black_f407vg
     ${override.extra_default_envs}
 
 ; -- Location of the configuration files
