Fix ehternet define

--- a/user_setups/stm32f4xx/stm32f407-devebox_ili9341.ini
+++ b/user_setups/stm32f4xx/stm32f407-devebox_ili9341.ini
@@ -35,8 +35,9 @@ build_flags =
     -D HASP_INPUT_PIN=PA0           ; User Button K1 on DevEBox board
     -D STM32_SERIAL1                ; Set this option to use Serial1 as default sersial port, leave out if using Serial2
     -D HASP_USE_ETHERNET=1
+    -D USE_BUILTIN_ETHERNET=1
     -D HAL_ETH_MODULE_ENABLED=1
-    -D LAN8742A_PHY_ADDRESS=0x01U
+    ; -D LAN8742A_PHY_ADDRESS=0x01U ; moved to include\stm32f4\hal_conf_custom.h
     ; -D DP83848_PHY_ADDRESS=0x01U
 
 lib_deps =
