--- a/user_setups/stm32f4xx/stm32f407-black_ili9341.ini
+++ b/user_setups/stm32f4xx/stm32f407-black_ili9341.ini
@@ -28,17 +28,24 @@ build_flags =
     -D HASP_OUTPUT_PIN=PE0 ; User LED D2 on DevEBox board
     -D HASP_INPUT_PIN=PD15 ; User Button K1 on DevEBox board
     -D STM32_SERIAL1 ; Set this option to use Serial1 as default sersial port, leave out if using Serial2
-    -D HAL_ETH_MODULE_ENABLED=1         ; enable ethernet support
-    -D LAN8742A_PHY_ADDRESS=0x01U       ; set LAN8720 PHY address
+    ;-D HAL_ETH_MODULE_ENABLED=1         ; enable ethernet support
+    ;-D LAN8742A_PHY_ADDRESS=0x01U       ; set LAN8720 PHY address
     -D HASP_USE_TASMOTA_SLAVE=1
+    -D W5500_MOSI=PB15 ;SPI2 MOSI
+    -D W5500_MISO=PB14 ;SPI2 MISO
+    -D W5500_SCLK=PB13 ;SPI2 SCLK
+    -D W5500_CS=PB6 ;SPI2 CS
+    -D W5500_RST=PD1 ;SPI2 CS
 
 lib_deps =
     ${env.lib_deps}
     Ticker@^3.1.5
+    Ethernet
     ; STM32duino LwIP@^2.1.2
     ; STM32duino STM32Ethernet@^1.0.5
     https://github.com/stm32duino/LwIP.git
-    https://github.com/stm32duino/STM32Ethernet.git
+    ;https://github.com/netwizeBE/Ethernet3.git
+    https://github.com/khoih-prog/EthernetWebServer_STM32
 
 src_filter = +<*> -<.git/> -<.svn/> -<example/> -<examples/> -<test/> -<tests/> -<lv_lib_zifont/> +<stm32f4/>
 
