Fix mac address query

--- a/user_setups/stm32f4xx/stm32f407-black_ili9341.ini
+++ b/user_setups/stm32f4xx/stm32f407-black_ili9341.ini
@@ -31,6 +31,7 @@ build_flags =
     ;-D HAL_ETH_MODULE_ENABLED=1         ; enable ethernet support
     ;-D LAN8742A_PHY_ADDRESS=0x01U       ; set LAN8720 PHY address
     -D HASP_USE_TASMOTA_SLAVE=1
+    -D HASP_USE_ETHERNET=1
     -D W5500_MOSI=PB15 ;SPI2 MOSI
     -D W5500_MISO=PB14 ;SPI2 MISO
     -D W5500_SCLK=PB13 ;SPI2 SCLK
@@ -40,11 +41,11 @@ build_flags =
 lib_deps =
     ${env.lib_deps}
     Ticker@^3.1.5
-    Ethernet
+    ;Ethernet
     ; STM32duino LwIP@^2.1.2
     ; STM32duino STM32Ethernet@^1.0.5
     https://github.com/stm32duino/LwIP.git
-    ;https://github.com/netwizeBE/Ethernet3.git
+    https://github.com/netwizeBE/Ethernet3.git
     https://github.com/khoih-prog/EthernetWebServer_STM32
 
 src_filter = +<*> -<.git/> -<.svn/> -<example/> -<examples/> -<test/> -<tests/> -<lv_lib_zifont/> +<stm32f4/>
