--- a/user_setups/stm32f4xx/stm32f407-devebox_ili9341.ini
+++ b/user_setups/stm32f4xx/stm32f407-devebox_ili9341.ini
@@ -16,7 +16,6 @@ monitor_port = COM19     ; To change the port, use platform_override.ini
 build_flags =
     ${env.build_flags}
     ${flags.stm32_flags}
-    -I include/stm32f4
 ; -- TFT_eSPI build options ------------------------
     ${lcd.lolin24}
     ;-D TFT_MISO=PB4 ;Default
@@ -34,19 +33,23 @@ build_flags =
     -D HASP_OUTPUT_PIN=PA1          ; User LED D2 on DevEBox board 
     -D HASP_INPUT_PIN=PA0           ; User Button K1 on DevEBox board
     -D STM32_SERIAL1                ; Set this option to use Serial1 as default sersial port, leave out if using Serial2
+; -- LAN8720 Ethernet configuration ------------------
     -D HASP_USE_ETHERNET=1
     -D USE_BUILTIN_ETHERNET=1
     -D HAL_ETH_MODULE_ENABLED=1
     ; -D LAN8742A_PHY_ADDRESS=0x01U ; moved to include\stm32f4\hal_conf_custom.h
     ; -D DP83848_PHY_ADDRESS=0x01U
-
+; -- Spiffs Configuration
+    -D ARCH_STM32=1
+    -D LOG_PAGE_SIZE=256
+    -D SPIFFS_HAL_CALLBACK_EXTRA=0
+    -D NO_TEST=1
+    
 lib_deps =
-    ${env.lib_deps}
-    Ticker@^3.1.5
-    ; STM32duino LwIP@^2.1.2
+    ${libs.stm32_deps}
     ; STM32duino STM32Ethernet@^1.0.5
-    https://github.com/stm32duino/LwIP.git
     https://github.com/stm32duino/STM32Ethernet.git
-    https://github.com/khoih-prog/EthernetWebServer_STM32
+    STM32Spiffs
+    https://github.com/pellepl/spiffs.git
 
 src_filter = +<*> -<.git/> -<.svn/> -<example/> -<examples/> -<test/> -<tests/> -<lv_lib_zifont/> +<stm32f4/>
