--- a/platformio.ini
+++ b/platformio.ini
@@ -93,10 +93,20 @@ esp32_flags=
 
 stm32_flags=
     ${env.build_flags}
+    -I include/stm32f4
     -D IRAM_ATTR=                   ; No IRAM_ATTR available on STM32
     -D STM32
     -D STREAMUTILS_USE_EEPROM_UPDATE=1  ; update cell only when changed
     -D MQTT_MAX_PACKET_SIZE=2048    ; longer PubSubClient messages
+
+[libs]
+stm32_deps=
+    ${env.lib_deps}
+    SPIMemory@^3.4.0
+    Ticker@^3.1.5
+    ; STM32duino LwIP@^2.1.2
+    https://github.com/stm32duino/LwIP.git
+    https://github.com/khoih-prog/EthernetWebServer_STM32
 
 ; -- By default there are no ${override.build_flags} set
 ; -- to use it, copy platformio_override.ini from the template
