--- a/user_setups/stm32f4xx/stm32f407-black_ili9341.ini
+++ b/user_setups/stm32f4xx/stm32f407-black_ili9341.ini
@@ -14,7 +14,6 @@ monitor_port = COM7     ; To change the port, use platform_override.ini
 build_flags =
     ${env.build_flags}
     ${flags.stm32_flags}
-    -I include/stm32f4
 ; -- TFT_eSPI build options ------------------------
     ${lcd.lolin24}
     ;-D TFT_MISO=PB4 ;Default
@@ -27,16 +26,17 @@ build_flags =
     -D TFT_RST=-1  ;D4
     -D HASP_OUTPUT_PIN=PE0 ; User LED D2 on DevEBox board
     -D HASP_INPUT_PIN=PD15 ; User Button K1 on DevEBox board
-    -D STM32_SERIAL1 ; Set this option to use Serial1 as default sersial port, leave out if using Serial2
-    ;-D HAL_ETH_MODULE_ENABLED=1         ; enable ethernet support
-    ;-D LAN8742A_PHY_ADDRESS=0x01U       ; set LAN8720 PHY address
+    -D STM32_SERIAL1 ; Set this option to use Serial1 as default serial port, leave out if using Serial2
     -D HASP_USE_TASMOTA_SLAVE=1
+; -- W5500 Ethernet configuration ------------------
     -D HASP_USE_ETHERNET=1
     -D W5500_MOSI=PB15 ;SPI2 MOSI
     -D W5500_MISO=PB14 ;SPI2 MISO
     -D W5500_SCLK=PB13 ;SPI2 SCLK
     -D W5500_CS=PB6 ;SPI2 CS
     -D W5500_RST=PD1 ;SPI2 CS
+    ;-D HAL_ETH_MODULE_ENABLED=1         ; enable ethernet support
+    ;-D LAN8742A_PHY_ADDRESS=0x01U       ; set LAN8720 PHY address
 
 lib_deps =
     ${env.lib_deps}
