Test FSMC driver

--- a/platformio.ini
+++ b/platformio.ini
@@ -69,6 +69,7 @@ build_flags =
     ;-w           ; Suppress warnings
     -D CORE_DEBUG_LEVEL=1           ; Errors
     -D LV_CONF_INCLUDE_SIMPLE
+    -D LV_LVGL_H_INCLUDE_SIMPLE     ; for lv_drivers
     -D SPIFFS_TEMPORAL_FD_CACHE     ; speedup opening recent files
     -D ARDUINOJSON_DECODE_UNICODE=1 ; for utf-8 symbols
     -D ARDUINOJSON_ENABLE_PROGMEM=1 ; for PROGMEM arguments
