--- a/user_setups/esp8266/D1-mini_ili9341.ini
+++ b/user_setups/esp8266/D1-mini_ili9341.ini
@@ -26,3 +26,7 @@ build_flags =
     -D TFT_BCKL=-1  ;None, configurable via web UI (e.g. 2 for D4)
     -D TOUCH_CS=0   ;D3  (can also be D1 or D2)
     -D TFT_RST=-1   ;RST
+
+lib_ignore =
+    GxTFT
+    XPT2046_Touchscreen
