--- a/user_setups/stm32f4xx/STM32F407VET6_black_fsmc.ini
+++ b/user_setups/stm32f4xx/STM32F407VET6_black_fsmc.ini
@@ -10,7 +10,7 @@ platform = ststm32
 board = black_f407ve
 ;board_build.mcu = stm32f407vet6
 ; upload_protocol = dfu
-upload_protocol = stlink
+upload_protocol = dfu
 debug_tool = stlink
 monitor_port = COM19     ; To change the port, use platform_override.ini
 build_flags =
@@ -23,19 +23,29 @@ build_flags =
     -D ILI9341_DRIVER=1
     -D TFT_WIDTH=240
     -D TFT_HEIGHT=320
-    -D USER_SETUP_LOADED=1
-    -D TOUCH_CS=PA6 ;NC
-    -D TFT_RST=-1  ;D4
-    -D STM32
-    -D TFT_SPI3
-    -D USE_DMA_TO_TFT
-    -D HASP_USE_TASMOTA_SLAVE=1
+    -D USE_FSMC                     ; Use the onboard FSMC TFT header
+    ;-D USER_SETUP_LOADED=1
+    ;-D TOUCH_CS=PA6 ;NC
+    ;-D TFT_RST=-1  ;D4
+    ;-D STM32
+    ;-D TFT_SPI3
+    ;-D USE_DMA_TO_TFT
+    -D HASP_USE_TASMOTA_SLAVE=0
     -D HASP_OUTPUT_PIN=PA1          ; User LED D2 on DevEBox board 
     -D HASP_INPUT_PIN=PA0           ; User Button K1 on DevEBox board
     -D STM32_SERIAL1                ; Set this option to use Serial1 as default sersial port, leave out if using Serial2
-    -D HASP_USE_ETHERNET=1
-    -D USE_BUILTIN_ETHERNET=1
-    -D HAL_ETH_MODULE_ENABLED=1
+    -D HASP_USE_WIFI=0
+    -D HASP_USE_MQTT=0
+    -D HASP_USE_HTTP=0
+    -D HASP_USE_MDNS=0
+    -D HASP_USE_SYSLOG=0
+    -D HASP_USE_TELNET=0
+    -D HASP_USE_SPIFFS=0
+    -D HASP_USE_EEPROM=1
+    -D HASP_USE_GPIO=0
+    -D HASP_USE_ETHERNET=0
+    -D USE_BUILTIN_ETHERNET=0
+    -D HAL_ETH_MODULE_ENABLED=0
     ; -D LAN8742A_PHY_ADDRESS=0x01U ; moved to include\stm32f4\hal_conf_custom.h
     ; -D DP83848_PHY_ADDRESS=0x01U
 
@@ -50,5 +60,8 @@ lib_deps =
     Adafruit GFX Library@^1.7.5
     ;https://github.com/ZinggJM/GxTFT.git
     XPT2046_Touchscreen
+
+lib_ignore =
+    lv_lib_zifont
 
 src_filter = +<*> -<.git/> -<.svn/> -<example/> -<examples/> -<test/> -<tests/> -<lv_lib_zifont/> +<stm32f4/>
