--- a/user_setups/stm32f4xx/stm32f407-devebox_ili9341.ini
+++ b/user_setups/stm32f4xx/stm32f407-devebox_ili9341.ini
@@ -49,4 +49,9 @@ lib_deps =
     https://github.com/stm32duino/STM32Ethernet.git
     https://github.com/khoih-prog/EthernetWebServer_STM32
 
+lib_ignore =
+    GxTFT
+    XPT2046_Touchscreen
+    lv_lib_zifont
+    
 src_filter = +<*> -<.git/> -<.svn/> -<example/> -<examples/> -<test/> -<tests/> -<lv_lib_zifont/> +<stm32f4/>
