--- a/user_setups/esp32/d1-mini-esp32_ili9341.ini
+++ b/user_setups/esp32/d1-mini-esp32_ili9341.ini
@@ -10,7 +10,8 @@ platform = espressif32@^1.12.0
 board = wemos_d1_mini32
 upload_port = COM5      ; To change the port, use platform_override.ini
 monitor_port = COM5     ; To change the port, use platform_override.ini
-board_build.partitions = default.csv
+board_build.partitions = esp32_partition_app1300k_spiffs1216k.csv
+
 build_flags =
     ${flags.esp32_flags}
 ; -- TFT_eSPI build options ------------------------
@@ -21,3 +22,7 @@ build_flags =
     -D TFT_RST=-1  ; RST
     -D TFT_BCKL=-1 ; None, configurable via web UI (e.g. 21)
     -D TOUCH_CS=17 ; (can also be 22 or 16)
+
+lib_ignore =
+    GxTFT
+    XPT2046_Touchscreen
