--- a/user_setups/esp32/d132-unoshield_ili9486_parallel.ini
+++ b/user_setups/esp32/d132-unoshield_ili9486_parallel.ini
@@ -9,6 +9,7 @@ platform = espressif32
 board = esp32dev
 upload_port = COM4      ; To change the port, use platform_override.ini
 monitor_port = COM4     ; To change the port, use platform_override.ini
+board_build.partitions = esp32_partition_app1300k_spiffs1216k.csv
 
 build_flags =
     ${flags.esp32_flags}
