--- a/user_setups/esp32/esp32cam_st7796.ini
+++ b/user_setups/esp32/esp32cam_st7796.ini
@@ -18,7 +18,7 @@ board = esp32cam
 debug_tool = esp-prog
 debug_init_break = tbreak setup
 ;board_build.partitions = min_spiffs.csv
-board_build.partitions = default.csv
+board_build.partitions = esp32_partition_app1300k_spiffs1216k.csv
 ;ESP32 CAM PINS
 build_flags =
     ${flags.esp32_flags}
@@ -26,6 +26,7 @@ build_flags =
     ${lcd.raspberrypi}
     -D USE_HSPI_PORT
     ${pins.hspi32}
+    -DBOARD_HAS_PSRAM
     -D TFT_CS=15
     -D TFT_DC=2
     -D TFT_RST=-1    ; 3.3v
@@ -39,3 +40,6 @@ build_flags =
 lib_deps =
     ${env.lib_deps}
 
+lib_ignore =
+    GxTFT
+    XPT2046_Touchscreen
