--- a/user_setups/esp32/nodemcu-32s_st7796.ini
+++ b/user_setups/esp32/nodemcu-32s_st7796.ini
@@ -10,6 +10,7 @@ platform = espressif32
 board = nodemcu-32s
 upload_port = COM3      ; To change the port, use platform_override.ini
 monitor_port = COM3     ; To change the port, use platform_override.ini
+board_build.partitions = esp32_partition_app1300k_spiffs1216k.csv
 debug_tool = esp-prog
 debug_init_break = tbreak setup
 
@@ -29,3 +30,7 @@ build_flags =
 ; -- Library options -------------------------------
 lib_deps =
     ${env.lib_deps}
+
+lib_ignore =
+    GxTFT
+    XPT2046_Touchscreen
