Update default configs

--- a/platformio.ini
+++ b/platformio.ini
@@ -86,11 +86,31 @@ esp8266_flags=
     ${env.build_flags}
     -D HTTP_UPLOAD_BUFLEN=640      ; lower http upload buffer
     -D MQTT_MAX_PACKET_SIZE=1024   ; longer PubSubClient messages
+    -D HASP_USE_WIFI=1
+    -D HASP_USE_MQTT=1
+    -D HASP_USE_HTTP=1
+    -D HASP_USE_MDNS=1
+    -D HASP_USE_SYSLOG=0
+    -D HASP_USE_TELNET=0
+    -D HASP_USE_SPIFFS=1
+    -D HASP_USE_EEPROM=1
+    -D HASP_USE_GPIO=1
+    -D HASP_USE_ETHERNET=0
 
 esp32_flags=
     ${env.build_flags}
     -D HTTP_UPLOAD_BUFLEN=1024      ; lower http upload buffer
     -D MQTT_MAX_PACKET_SIZE=2048    ; longer PubSubClient messages
+    -D HASP_USE_WIFI=1
+    -D HASP_USE_MQTT=1
+    -D HASP_USE_HTTP=1
+    -D HASP_USE_MDNS=1
+    -D HASP_USE_SYSLOG=0
+    -D HASP_USE_TELNET=0
+    -D HASP_USE_SPIFFS=1
+    -D HASP_USE_EEPROM=1
+    -D HASP_USE_GPIO=1
+    -D HASP_USE_ETHERNET=0
 
 stm32_flags=
     ${env.build_flags}
@@ -150,6 +170,9 @@ build_flags =
     -D TFT_BCKL=-1 ; None, configurable via web UI (e.g. 21)
     -D TOUCH_CS=17 ; (can also be 22 or 16)
 
+lib_ignore =
+    GxTFT
+    XPT2046_Touchscreen
 
 ;***************************************************
 ;          Lolin D32 Pro with Lolin TFT 2.4"
@@ -172,6 +195,9 @@ build_flags =
     -D TFT_BCKL=-1  ; None, configurable via web UI (e.g. 21)
     -D TOUCH_CS=17  ; (can also be 22 or 16)
 
+lib_ignore =
+    GxTFT
+    XPT2046_Touchscreen
 
 ;***************************************************
 ;          D1 Mini ESP8266 with Lolin TFT 2.4"
@@ -198,6 +224,9 @@ build_flags =
     -D TOUCH_CS=0   ;D3  (can also be D1 or D2)
     -D TFT_RST=-1   ;RST
 
+lib_ignore =
+    GxTFT
+    XPT2046_Touchscreen
 
 ;***************************************************
 ;          Native build
