Update User Setups

--- a/platformio.ini
+++ b/platformio.ini
@@ -20,7 +20,7 @@ extra_configs =
     platformio_override.ini
     ; --  Put active [env] files in this dir to be included in the build menu
     user_setups/active/*.ini
-    user_setups/*/*.ini
+    ; user_setups/*/*.ini
 
 default_envs =
     ; Uncomment the needed environments in platformio_override.ini
@@ -158,7 +158,7 @@ platform = espressif32@^1.12.0
 board = wemos_d1_mini32
 upload_port = COM5      ; To change the port, use platform_override.ini
 monitor_port = COM5     ; To change the port, use platform_override.ini
-board_build.partitions = default.csv
+board_build.partitions = esp32_partition_app1280k_spiffs1472k.csv
 build_flags =
     ${flags.esp32_flags}
 ; -- TFT_eSPI build options ------------------------
@@ -183,7 +183,7 @@ platform = espressif32
 board = lolin_d32_pro
 upload_port = COM6      ; To change the port, use platform_override.ini
 monitor_port = COM6     ; To change the port, use platform_override.ini
-board_build.partitions = default.csv
+board_build.partitions = esp32_partition_app1280k_spiffs1472k.csv
 build_flags =
     ${flags.esp32_flags}
 ; -- TFT_eSPI build options ------------------------
