--- a/platformio_override-template.ini
+++ b/platformio_override-template.ini
@@ -3,6 +3,10 @@
 ;
 ; The platformio_override.ini file is not overwritten or monitored by git
 
+[platformio]
+extra_configs =
+; Uncomment the following line to show all User Setups in the PIO sidebar
+    ;user_setups/*/*.ini
 
 [override]
 ; -- Hasp config options ----------------------
