--- a/user_setups/esp32/d132-unoshield_ili9486_parallel.ini
+++ b/user_setups/esp32/d132-unoshield_ili9486_parallel.ini
@@ -9,7 +9,7 @@ platform = espressif32
 board = esp32dev
 upload_port = COM4      ; To change the port, use platform_override.ini
 monitor_port = COM4     ; To change the port, use platform_override.ini
-board_build.partitions = esp32_partition_app1300k_spiffs1216k.csv
+board_build.partitions = esp32_partition_app1280k_spiffs1472k.csv
 
 build_flags =
     ${flags.esp32_flags}
@@ -47,4 +47,6 @@ build_flags =
 lib_deps =
     ${env.lib_deps}
 
-src_filter = +<*> +<../drivers/stm32f429_disco>
+lib_ignore =
+    GxTFT
+    XPT2046_Touchscreen
