Update User Setups

--- a/platformio.ini
+++ b/platformio.ini
@@ -20,7 +20,7 @@ extra_configs =
     platformio_override.ini
     ; --  Put active [env] files in this dir to be included in the build menu
     user_setups/active/*.ini
-    ; user_setups/*/*.ini
+     user_setups/*/*.ini
 
 default_envs =
     ; Uncomment the needed environments in platformio_override.ini
@@ -156,8 +156,8 @@ hspi32 =
 [env:d1mini32-lolintft24]
 platform = espressif32@^1.12.0
 board = wemos_d1_mini32
-upload_port = COM5      ; To change the port, use platform_override.ini
-monitor_port = COM5     ; To change the port, use platform_override.ini
+;upload_port = COM5      ; To change the port, use platform_override.ini
+;monitor_port = COM5     ; To change the port, use platform_override.ini
 board_build.partitions = esp32_partition_app1280k_spiffs1472k.csv
 build_flags =
     ${flags.esp32_flags}
@@ -181,8 +181,8 @@ lib_ignore =
 [env:lolind32pro-lolintft24]
 platform = espressif32
 board = lolin_d32_pro
-upload_port = COM6      ; To change the port, use platform_override.ini
-monitor_port = COM6     ; To change the port, use platform_override.ini
+;upload_port = COM6      ; To change the port, use platform_override.ini
+;monitor_port = COM6     ; To change the port, use platform_override.ini
 board_build.partitions = esp32_partition_app1280k_spiffs1472k.csv
 build_flags =
     ${flags.esp32_flags}
@@ -205,8 +205,8 @@ lib_ignore =
 [env:d1mini-lolintft24]
 platform = espressif8266@^2.4.0 ;@2.3.2
 board = d1_mini
-upload_port = COM7      ; To change the port, use platform_override.ini
-monitor_port = COM7     ; To change the port, use platform_override.ini
+;upload_port = COM7      ; To change the port, use platform_override.ini
+;monitor_port = COM7     ; To change the port, use platform_override.ini
 board_build.f_flash = 40000000L
 board_build.flash_mode = dout
 board_build.ldscript = eagle.flash.4m2m.ld  ; 2Mb Spiffs
