--- a/user_setups/stm32f4xx/stm32f407-devebox_ili9341.ini
+++ b/user_setups/stm32f4xx/stm32f407-devebox_ili9341.ini
@@ -30,6 +30,15 @@ build_flags =
     -D STM32
     -D TFT_SPI3
     -D USE_DMA_TO_TFT
+    -D HASP_USE_WIFI=0
+    -D HASP_USE_MQTT=1
+    -D HASP_USE_HTTP=1
+    -D HASP_USE_MDNS=0
+    -D HASP_USE_SYSLOG=0
+    -D HASP_USE_TELNET=0
+    -D HASP_USE_SPIFFS=0
+    -D HASP_USE_EEPROM=1
+    -D HASP_USE_GPIO=0
     -D HASP_USE_TASMOTA_SLAVE=1
     -D HASP_OUTPUT_PIN=PA1          ; User LED D2 on DevEBox board 
     -D HASP_INPUT_PIN=PA0           ; User Button K1 on DevEBox board
