--- a/platformio.ini
+++ b/platformio.ini
@@ -20,7 +20,7 @@ extra_configs =
     platformio_override.ini
     ; --  Put active [env] files in this dir to be included in the build menu
     user_setups/active/*.ini
-     user_setups/*/*.ini
+    ; user_setups/*/*.ini
 
 default_envs =
     ; Uncomment the needed environments in platformio_override.ini
@@ -115,6 +115,7 @@ esp32_flags=
 stm32_flags=
     ${env.build_flags}
     -D IRAM_ATTR=                   ; No IRAM_ATTR available on STM32
+    -D ICACHE_RAM_ATTR=
     -D STM32
     -D STREAMUTILS_USE_EEPROM_UPDATE=1  ; update cell only when changed
     -D MQTT_MAX_PACKET_SIZE=2048    ; longer PubSubClient messages
