--- a/user_setups/esp8266/D1-mini_ili9341.ini
+++ b/user_setups/esp8266/D1-mini_ili9341.ini
@@ -8,8 +8,8 @@
 [env:d1mini-lolintft24]
 platform = espressif8266@^2.4.0 ;@2.3.2
 board = d1_mini
-upload_port = COM7      ; To change the port, use platform_override.ini
-monitor_port = COM7     ; To change the port, use platform_override.ini
+;upload_port = COM7      ; To change the port, use platform_override.ini
+;monitor_port = COM7     ; To change the port, use platform_override.ini
 board_build.f_flash = 40000000L
 board_build.flash_mode = dout
 board_build.ldscript = eagle.flash.4m2m.ld  ; 2Mb Spiffs
