Standard STM32 webserver with WiFiSpi

--- a/user_setups/stm32f4xx/stm32f407-black_ili9341_wifi.ini
+++ b/user_setups/stm32f4xx/stm32f407-black_ili9341_wifi.ini
@@ -15,6 +15,7 @@ build_flags =
     ${env.build_flags}
     ${flags.stm32_flags}
     -I include/stm32f4
+    -I include/espspi
 ; -- TFT_eSPI build options ------------------------
     ${lcd.lolin24}
     ;-D TFT_MISO=PB4 ;Default
@@ -56,8 +57,7 @@ lib_deps =
     ; STM32duino STM32Ethernet@^1.0.5
     ; https://github.com/stm32duino/LwIP.git
     ; https://github.com/netwizeBE/Ethernet3.git
-    ; https://github.com/khoih-prog/EthernetWebServer_STM32
-    https://github.com/arovak/EthernetWebServer_STM32.git
+    https://github.com/khoih-prog/EthernetWebServer_STM32
     https://github.com/JiriBilek/WiFiSpi.git
 
 lib_ignore =
@@ -65,6 +65,6 @@ lib_ignore =
     XPT2046_Touchscreen
     lv_lib_zifont
 
-src_filter = +<*> -<.git/> -<.svn/> -<example/> -<examples/> -<test/> -<tests/> -<lv_lib_zifont/> +<stm32f4/>
+src_filter = +<*> -<.git/> -<.svn/> -<example/> -<examples/> -<test/> -<tests/> -<lv_lib_zifont/> +<stm32f4/> +<espspi/>
 
 ;***************************************************
