Update user config

--- a/user_setups/stm32f4xx/STM32F407VET6_black_fsmc.ini
+++ b/user_setups/stm32f4xx/STM32F407VET6_black_fsmc.ini
@@ -5,6 +5,22 @@
 ;               - xpt2046 touch controller          ;
 ;***************************************************;
 
+; !Warning! Make sure to purchase a compatible screen, preferably from the same vendor
+; There are FSMC 2 interfaces: One is marked "TFT" and the other one is marked "New-TFT"
+; The pinout is different and you can NOT interchange screens from these 2 interfaces!
+
+; Versions:
+; - STM32F407VET6 Black (v2.1) has 512 KB flash
+; Purchase Link: https://www.aliexpress.com/item/32618222721.html
+;                https://www.aliexpress.com/item/33013274704.html
+;                https://www.aliexpress.com/item/32868515918.html
+;                https://www.aliexpress.com/item/1000006481553.html (! V2.0 !)
+; Documentation: https://github.com/mcauser/BLACK_F407VE
+
+; - STM32F407ZGT6 Black (V3.0) has 1 MB flash (with empty PSRAM slot on the back)
+; Purchase Link: 
+; Documentation: https://github.com/mcauser/BLACK_F407ZG
+
 [env:STM32F407VET6_black_fsmc]
 platform = ststm32
 board = black_f407ve
@@ -12,7 +28,7 @@ board = black_f407ve
 ; upload_protocol = dfu
 upload_protocol = dfu
 debug_tool = stlink
-monitor_port = COM19     ; To change the port, use platform_override.ini
+;monitor_port = COM19     ; To change the port, use platform_override.ini
 build_flags =
     ${env.build_flags}
     ${flags.stm32_flags}
