--- a/user_setups/stm32f4xx/stm32f407-devebox_ili9341.ini
+++ b/user_setups/stm32f4xx/stm32f407-devebox_ili9341.ini
@@ -5,14 +5,23 @@
 ;               - xpt2046 touch controller          ;
 ;***************************************************;
 
+; Purchase Link: https://www.aliexpress.com/item/32985219862.html
+;                https://www.aliexpress.com/item/4000094075769.html
+;                https://www.aliexpress.com/item/4000602517153.html
+; Documentation: https://github.com/mcauser/MCUDEV_DEVEBOX_F407VGT6
+
+; Versions:
+; - STM32F407VET6 has 512 KB flash
+; - STM32F407VGT6 has 1 MB flash
+
 [env:DevEBox_STM32F4xx]
 platform = ststm32
-board = black_f407zg
+board = black_f407vg
 board_build.mcu = stm32f407vgt6
 ; upload_protocol = dfu
 upload_protocol = stlink
 debug_tool = stlink
-monitor_port = COM19     ; To change the port, use platform_override.ini
+;monitor_port = COM19     ; To change the port, use platform_override.ini
 build_flags =
     ${env.build_flags}
     ${flags.stm32_flags}
@@ -38,7 +47,7 @@ build_flags =
     -D HASP_USE_TELNET=0
     -D HASP_USE_SPIFFS=0
     -D HASP_USE_EEPROM=1
-    -D HASP_USE_GPIO=0
+    -D HASP_USE_GPIO=1
     -D HASP_USE_TASMOTA_SLAVE=1
     -D HASP_OUTPUT_PIN=PA1          ; User LED D2 on DevEBox board 
     -D HASP_INPUT_PIN=PA0           ; User Button K1 on DevEBox board
