Update User Configs

--- a/user_setups/stm32f4xx/STM32F407VET6_black_fsmc.ini
+++ b/user_setups/stm32f4xx/STM32F407VET6_black_fsmc.ini
@@ -6,7 +6,7 @@
 ;***************************************************;
 
 ; !Warning! Make sure to purchase a compatible screen, preferably from the same vendor
-; There are FSMC 2 interfaces: One is marked "TFT" and the other one is marked "New-TFT"
+; There are multiple FSMC interfaces: e.g. One is marked "TFT" and the other one is marked "New-TFT"
 ; The pinout is different and you can NOT interchange screens from these 2 interfaces!
 
 ; Versions:
@@ -24,13 +24,11 @@
 [env:STM32F407VET6_black_fsmc]
 platform = ststm32
 board = black_f407ve
-;board_build.mcu = stm32f407vet6
 ; upload_protocol = dfu
 upload_protocol = dfu
 debug_tool = stlink
 ;monitor_port = COM19     ; To change the port, use platform_override.ini
 build_flags =
-    ${env.build_flags}
     ${flags.stm32_flags}
     -I include/stm32f4
     -I include/GxTFT/src
