--- a/user_setups/stm32f4xx/stm32f407-devebox_ili9341.ini
+++ b/user_setups/stm32f4xx/stm32f407-devebox_ili9341.ini
@@ -17,13 +17,12 @@
 [env:DevEBox_STM32F4xx]
 platform = ststm32
 board = black_f407vg
-board_build.mcu = stm32f407vgt6
+board_upload.maximum_size = 1048576 ; Flash size is wrong in variant
 ; upload_protocol = dfu
 upload_protocol = stlink
 debug_tool = stlink
 ;monitor_port = COM19     ; To change the port, use platform_override.ini
 build_flags =
-    ${env.build_flags}
     ${flags.stm32_flags}
     -I include/stm32f4
 ; -- TFT_eSPI build options ------------------------
@@ -48,7 +47,7 @@ build_flags =
     -D HASP_USE_SPIFFS=0
     -D HASP_USE_EEPROM=1
     -D HASP_USE_GPIO=1
-    -D HASP_USE_TASMOTA_SLAVE=1
+    -D HASP_USE_TASMOTA_SLAVE=0
     -D HASP_OUTPUT_PIN=PA1          ; User LED D2 on DevEBox board 
     -D HASP_INPUT_PIN=PA0           ; User Button K1 on DevEBox board
     -D STM32_SERIAL1                ; Set this option to use Serial1 as default sersial port, leave out if using Serial2
