Update User Configs

--- a/platformio.ini
+++ b/platformio.ini
@@ -68,6 +68,9 @@ build_flags =
     -Og          ; Code Debug Optimization
     ;-w           ; Suppress warnings
     -D CORE_DEBUG_LEVEL=1           ; Errors
+    -D HASP_VERSION_MAJOR=0
+    -D HASP_VERSION_MINOR=1
+    -D HASP_VERSION_REVISION=2
     -D LV_CONF_INCLUDE_SIMPLE
     -D LV_LVGL_H_INCLUDE_SIMPLE     ; for lv_drivers
     -D SPIFFS_TEMPORAL_FD_CACHE     ; speedup opening recent files
@@ -79,6 +82,8 @@ build_flags =
     ${override.build_flags}
 
 src_filter = +<*> -<.git/> -<.svn/> -<example/> -<examples/> -<test/> -<tests/> -<stm32f4/>
+
+extra_scripts = pre:extra_script.py
 
 ; -- Platform specific build flags
 [flags]
