Update to lvgl 7.6.1

--- a/platformio.ini
+++ b/platformio.ini
@@ -48,11 +48,11 @@ lib_deps =
     https://github.com/netwizeBE/TFT_eSPI.git
     ;TFT_eSPI@^2.2.2     ; Tft SPI drivers
     ;TFT_eSPI@^1.4.20    ; Tft SPI drivers
-    PubSubClient@^2.7.0  ; MQTT client
-    ArduinoJson@^6.15.1,>6.15.0  ; needs at least 6.15.0
+    PubSubClient@^2.8.0  ; MQTT client
+    ArduinoJson@^6.16.1  ; JSON Parser
     StreamUtils@^1.4.0
     Syslog@^2.0.0
-    AceButton@^1.4.0
+    AceButton@^1.6.1
     ;AsyncTCP
     ;https://github.com/me-no-dev/ESPAsyncWebServer/archive/master.zip
     ;https://github.com/me-no-dev/ESPAsyncTCP/archive/master.zip
@@ -130,27 +130,6 @@ hspi32 =
 
 
 ;***************************************************
-;          D1 Mini ESP32 with Lolin TFT 2.4"
-;***************************************************
-[env:d1mini32-lolintft24]
-platform = espressif32@^1.12.0
-board = wemos_d1_mini32
-upload_port = COM5      ; To change the port, use platform_override.ini
-monitor_port = COM5     ; To change the port, use platform_override.ini
-board_build.partitions = default.csv
-build_flags =
-    ${flags.esp32_flags}
-; -- TFT_eSPI build options ------------------------
-    ${lcd.lolin24}
-    ${pins.vspi32}
-    -D TFT_DC=5
-    -D TFT_CS=26 
-    -D TFT_RST=-1  ; RST
-    -D TFT_BCKL=-1 ; None, configurable via web UI (e.g. 21)
-    -D TOUCH_CS=17 ; (can also be 22 or 16)
-
-
-;***************************************************
 ;          Lolin D32 Pro with Lolin TFT 2.4"
 ;***************************************************
 ; !! This board already defines TFT_CS, TFT_DC and TFT_RST !!
@@ -159,7 +138,7 @@ platform = espressif32
 board = lolin_d32_pro
 upload_port = COM6      ; To change the port, use platform_override.ini
 monitor_port = COM6     ; To change the port, use platform_override.ini
-board_build.partitions = default.csv
+board_build.partitions = esp32_partition_app1300k_spiffs1216k.csv ; default.csv
 build_flags =
     ${flags.esp32_flags}
 ; -- TFT_eSPI build options ------------------------
