--- a/user_setups/esp32/d1-mini-esp32_ili9341.ini
+++ b/user_setups/esp32/d1-mini-esp32_ili9341.ini
@@ -8,9 +8,9 @@
 [env:d1mini32-lolintft24]
 platform = espressif32@^1.12.0
 board = wemos_d1_mini32
-upload_port = COM5      ; To change the port, use platform_override.ini
-monitor_port = COM5     ; To change the port, use platform_override.ini
-board_build.partitions = default.csv
+upload_port = COM6      ; To change the port, use platform_override.ini
+monitor_port = COM6     ; To change the port, use platform_override.ini
+board_build.partitions = esp32_partition_app1300k_spiffs1216k.csv ; default.csv
 build_flags =
     ${flags.esp32_flags}
 ; -- TFT_eSPI build options ------------------------
