Update platform version

--- a/platformio.ini
+++ b/platformio.ini
@@ -134,7 +134,7 @@ hspi32 =
 ;***************************************************
 ; !! This board already defines TFT_CS, TFT_DC and TFT_RST !!
 [env:lolind32pro-lolintft24]
-platform = espressif32
+platform = espressif32@^2.0.0
 board = lolin_d32_pro
 upload_port = COM6      ; To change the port, use platform_override.ini
 monitor_port = COM6     ; To change the port, use platform_override.ini
@@ -155,7 +155,7 @@ build_flags =
 ;          D1 Mini ESP8266 with Lolin TFT 2.4"
 ;***************************************************
 [env:d1mini-lolintft24]
-platform = espressif8266@^2.4.0 ;@2.3.2
+platform = espressif8266@^2.6.2
 board = d1_mini
 ;upload_port = To change the port, use platform_override.ini
 ;monitor_port = To change the port, use platform_override.ini
@@ -180,25 +180,25 @@ build_flags =
 ;***************************************************
 ;          Native build
 ;***************************************************
-[env:native]
-platform = native
-build_flags =
-  -D LV_CONF_INCLUDE_SIMPLE
-  ; -I src Required to find lv_conf.h
-  -I src
-  -I drivers/sdl2
-  -lSDL2
-  ; SDL drivers options
-  -D LV_LVGL_H_INCLUDE_SIMPLE
-  -D LV_DRV_NO_CONF
-  -D USE_MONITOR
-  -D MONITOR_ZOOM=2
-  -D USE_MOUSE
-  -D USE_MOUSEWHEEL
-  -D USE_KEYBOARD
-lib_deps =
-  ;lvgl=https://github.com/littlevgl/lvgl/archive/master.zip
-  ;lvgl@^6.1.0
-  ;lv_drivers=https://github.com/littlevgl/lv_drivers/archive/master.zip
-  lv_drivers@^6.0.2
-src_filter = +<*> +<../drivers/sdl2>
+;[env:native]
+;platform = native
+;build_flags =
+;  -D LV_CONF_INCLUDE_SIMPLE
+;  ; -I src Required to find lv_conf.h
+;  -I src
+;  -I drivers/sdl2
+;  -lSDL2
+;  ; SDL drivers options
+;  -D LV_LVGL_H_INCLUDE_SIMPLE
+;  -D LV_DRV_NO_CONF
+;  -D USE_MONITOR
+;  -D MONITOR_ZOOM=2
+;  -D USE_MOUSE
+;  -D USE_MOUSEWHEEL
+;  -D USE_KEYBOARD
+;lib_deps =
+;  ;lvgl=https://github.com/littlevgl/lvgl/archive/master.zip
+;  ;lvgl@^6.1.0
+;  ;lv_drivers=https://github.com/littlevgl/lv_drivers/archive/master.zip
+;  lv_drivers@^6.0.2
+;src_filter = +<*> +<../drivers/sdl2>
