--- a/user_setups/esp32/d1-mini-esp32_ili9341.ini
+++ b/user_setups/esp32/d1-mini-esp32_ili9341.ini
@@ -6,10 +6,14 @@
 ;***************************************************;
 
 [env:d1mini32-lolintft24]
-platform = espressif32@^1.12.0
+platform = espressif32@^2.0.0
 board = wemos_d1_mini32
-upload_port = COM6      ; To change the port, use platform_override.ini
-monitor_port = COM6     ; To change the port, use platform_override.ini
+monitor_port = COM6      ; To change the port, use platform_override.ini
+upload_port = COM6     ; To change the port, use platform_override.ini
+;upload_protocol = espota ; You can switch to ArduinoOTA after flashing over serial once
+;upload_port = 10.1.0.113 ; IP of the ESP
+;upload_flags =
+;    --port=3232
 board_build.partitions = esp32_partition_app1300k_spiffs1216k.csv ; default.csv
 build_flags =
     ${flags.esp32_flags}
