--- a/user_setups/esp32/esp32-dev_ili9488_parallel.ini
+++ b/user_setups/esp32/esp32-dev_ili9488_parallel.ini
@@ -6,7 +6,7 @@
 ;***************************************************;
 
 [env:esp32dev-mrb3511]
-platform = espressif32
+platform = espressif32@^2.0.0
 board = esp32dev
 upload_port = COM1      ; To change the port, use platform_override.ini
 monitor_port = COM1     ; To change the port, use platform_override.ini
