--- a/user_setups/esp8266/esp8266_st7735.ini
+++ b/user_setups/esp8266/esp8266_st7735.ini
@@ -5,7 +5,7 @@
 ;***************************************************;
 
 [env:esp12e-st7735]
-platform = espressif8266@^2.4.0 ;@2.3.2
+platform = espressif8266@^2.6.2
 board = esp12e
 upload_port = COM8      ; To change the port, use platform_override.ini
 monitor_port = COM8     ; To change the port, use platform_override.ini
