--- a/user_setups/esp32/d1-mini-esp32_ili9341.ini
+++ b/user_setups/esp32/d1-mini-esp32_ili9341.ini
@@ -8,6 +8,7 @@
 [env:d1mini32-lolintft24]
 platform = espressif32@^2.0.0
 board = wemos_d1_mini32
+monitor_filters = esp32_exception_decoder
 monitor_port = COM6      ; To change the port, use platform_override.ini
 upload_port = COM6     ; To change the port, use platform_override.ini
 ;upload_protocol = espota ; You can switch to ArduinoOTA after flashing over serial once
