--- a/platformio.ini
+++ b/platformio.ini
@@ -77,6 +77,9 @@ build_flags =
     ;-D DISABLE_LOGGING
     -I include   ; include lv_conf.h and hasp_conf.h
     ${override.build_flags}
+    -D HASP_VERSION_MAJOR=0
+    -D HASP_VERSION_MINOR=2
+    -D HASP_VERSION_REVISION=1109
 
 src_filter = +<*> -<.git/> -<.svn/> -<example/> -<examples/> -<test/> -<tests/> -<stm32f4/>
 
@@ -88,6 +91,7 @@ esp8266_flags=
     ${env.build_flags}
     -D HTTP_UPLOAD_BUFLEN=640      ; lower http upload buffer
     -D MQTT_MAX_PACKET_SIZE=1024   ; longer PubSubClient messages
+; -- hasp-lvgl build options ------------------------
     -D HASP_USE_WIFI=1
     -D HASP_USE_MQTT=1
     -D HASP_USE_HTTP=1
@@ -103,12 +107,13 @@ esp32_flags=
     ${env.build_flags}
     -D HTTP_UPLOAD_BUFLEN=1024      ; lower http upload buffer
     -D MQTT_MAX_PACKET_SIZE=2048    ; longer PubSubClient messages
+; -- hasp-lvgl build options ------------------------
     -D HASP_USE_WIFI=1
     -D HASP_USE_MQTT=1
     -D HASP_USE_HTTP=1
     -D HASP_USE_MDNS=1
-    -D HASP_USE_SYSLOG=0
-    -D HASP_USE_TELNET=0
+    -D HASP_USE_SYSLOG=1
+    -D HASP_USE_TELNET=1
     -D HASP_USE_SPIFFS=1
     -D HASP_USE_EEPROM=1
     -D HASP_USE_GPIO=1
