--- a/platformio.ini
+++ b/platformio.ini
@@ -51,7 +51,7 @@ lib_deps =
     PubSubClient@^2.8.0  ; MQTT client
     ArduinoJson@^6.16.1  ; JSON Parser
     StreamUtils@^1.4.0
-    Syslog@^2.0.0
+    ;Syslog@^2.0.0       ; Obsoleted
     AceButton@^1.6.1
     ;AsyncTCP
     ;https://github.com/me-no-dev/ESPAsyncWebServer/archive/master.zip
