--- a/platformio_override-template.ini
+++ b/platformio_override-template.ini
@@ -9,10 +9,10 @@ extra_configs =
     ;user_setups/*/*.ini
 
 [override]
-; -- Hasp config options ----------------------
+; -- Hasp config options --------------------------------------
 build_flags =
 ; -- Use settings from file user_config_override.h
-    -DUSE_CONFIG_OVERRIDE
+;    -DUSE_CONFIG_OVERRIDE
 
 extra_default_envs =
     my_custom_build
@@ -26,23 +26,14 @@ extra_default_envs =
     ;nodemcu32s-raspi
     ;esp32dev-ili9488
 
-[env:my_custom_build]
-platform = espressif32
-board = nodemcu-32s
-upload_port = COM3
-monitor_port = COM3
-debug_tool = esp-prog
-debug_init_break = tbreak setup
-build_flags =
-    ${flags.esp32_flags}
-; -- TFT_eSPI build options ------------------------
-    ${lcd.raspberrypi}
-    ${pins.vspi32}
-    -D TFT_CS=5
-    -D TFT_DC=4
-    -D TFT_RST=32
-    -D TOUCH_CS=22
+; -- Define COM ports for each environment --------------------
+[env:d1mini32-lolintft24]
+upload_port = COM6      ; Change to the correct port
+monitor_port = COM6     ; Change to the correct port
 
+[env:d1mini-lolintft24]
+upload_port = COM4      ; Change to the correct port
+monitor_port = COM4     ; Change to the correct port
 
 [env:esp32dev-mrb3511]
 upload_port = COM3      ; Change to the correct port
@@ -53,3 +44,21 @@ upload_protocol = espota  ; Use ArduinoOTA after flashing over serial
 upload_port = 192.168.0.4 ; IP of the ESP
 upload_flags =
   --port=3232
+
+; -- Custom Environment configuration example -----------------
+[env:my_custom_build]
+platform = espressif32
+board = nodemcu-32s
+upload_port = COM3
+monitor_port = COM3
+debug_tool = esp-prog
+debug_init_break = tbreak setup
+build_flags =
+    ${flags.esp32_flags}
+; -- TFT_eSPI build options -----------------------------------
+    ${lcd.raspberrypi}
+    ${pins.vspi32}
+    -D TFT_CS=5
+    -D TFT_DC=4
+    -D TFT_RST=32
+    -D TOUCH_CS=22
