--- a/platformio.ini
+++ b/platformio.ini
@@ -1,21 +1,15 @@
 ; PlatformIO Project Configuration File
 ;
-;   Build options: build flags, source filter
-;   Upload options: custom upload port, speed and extra flags
-;   Library options: dependencies, extra library storages
-;   Advanced options: extra scripting
-;
 ; Please visit documentation for the other options and examples
 ; http://docs.platformio.org/page/projectconf.html
 
 
-;***************************************************
+;**************************************************************
 ;          Common project settings
-;***************************************************
+;**************************************************************
 [platformio]
 extra_configs =
     lcd_config.ini
-    pin_config.ini
     ; --  Put active [env] files in this dir to be included in the build menu
     user_setups/active/*.ini
     ; --  Add customizations to this file only:
@@ -48,10 +42,10 @@ lib_deps =
     ;TFT_eSPI@^2.2.2     ; Tft SPI drivers
     ;TFT_eSPI@^1.4.20    ; Tft SPI drivers
     PubSubClient@^2.8.0  ; MQTT client
-    ArduinoJson@^6.16.1  ; JSON Parser
-    StreamUtils@^1.4.0
+    ArduinoJson@^6.17.1  ; JSON Parser
+    StreamUtils@^1.5.0
     ;Syslog@^2.0.0       ; Obsoleted
-    AceButton@^1.6.1
+    AceButton@^1.7.0
     ;AsyncTCP
     ;https://github.com/me-no-dev/ESPAsyncWebServer/archive/master.zip
     ;https://github.com/me-no-dev/ESPAsyncTCP/archive/master.zip
@@ -61,20 +55,23 @@ lib_ignore =
     https://github.com/littlevgl/lvgl.git
 
 
-; -- littlevgl config options ----------------------
 build_flags =
     ;-Os          ; Code Size Optimization
     -Og          ; Code Debug Optimization
     ;-w           ; Suppress warnings
     -D CORE_DEBUG_LEVEL=1           ; Errors
+    -I include   ; include lv_conf.h and hasp_conf.h
+    ; -- littlevgl build options ------------------------------
     -D LV_CONF_INCLUDE_SIMPLE
     -D LV_LVGL_H_INCLUDE_SIMPLE     ; for lv_drivers
+    ; -- littlevgl build options ------------------------------
     -D SPIFFS_TEMPORAL_FD_CACHE     ; speedup opening recent files
+    ; -- ArduinoJson build options ----------------------------
     -D ARDUINOJSON_DECODE_UNICODE=1 ; for utf-8 symbols
     -D ARDUINOJSON_ENABLE_PROGMEM=1 ; for PROGMEM arguments
+    ; -- StreamUtils build options ----------------------------
     -D STREAMUTILS_ENABLE_EEPROM=1  ; for STM32, it also supports EEPROM
     ;-D DISABLE_LOGGING
-    -I include   ; include lv_conf.h and hasp_conf.h
     ${override.build_flags}
     -D HASP_VERSION_MAJOR=0
     -D HASP_VERSION_MINOR=2
@@ -127,7 +124,7 @@ stm32_flags=
     -D MQTT_MAX_PACKET_SIZE=2048    ; longer PubSubClient messages
 
 ; -- By default there are no ${override.build_flags} set
-; -- to use it, copy platformio_override.ini from the template
+; -- to use it, copy the platformio_override.ini file from the template
 [override]
 build_flags =
 extra_default_envs =
