Add ttgo-esp32-poe support

--- a/user_setups/esp32/TTGO-esp32-POE_ili9341.ini
+++ b/user_setups/esp32/TTGO-esp32-POE_ili9341.ini
@@ -30,6 +30,9 @@ build_flags =
     -D TFT_BCKL=16 ; None, configurable via web UI (e.g. 21)
     -D TOUCH_CS=32 ; (can also be 22 or 16)
 ; -- Options ----------------------------------------
-    -D HASP_USE_TELNET=1
     -D HASP_USE_ETHERNET=1
     -D HASP_USE_WIFI=0
+
+lib_ignore =
+    GxTFT
+    XPT2046_Touchscreen
